footer navbar z-index fix

--- a/src/components/components/NavigationBarSubmenu/NavigationBarSubmenu.css
+++ b/src/components/components/NavigationBarSubmenu/NavigationBarSubmenu.css
@@ -97,6 +97,7 @@
 .navigation-submenu__links-list_place_footer {
     padding: 0;
     position: relative;
+    z-index: 0;
     transform: translateY(0);
     background-color: transparent;
     display: flex;
